[package]
name = "anet"
version = "0.4.0"
authors = ["Serbe <mkoctuk@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4"
byteorder = "1.3"
url = "2.1"
failure = "0.1"
futures = "0.1"
native-tls = "0.2"
tokio = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-timer = "0.2"

# [dependencies.tokio]
# version = "0.1"
# features = ["async-await-preview"]