[package]
name = "anet"
version = "0.4.0"
authors = ["Serbe <mkoctuk@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
byteorder = "1.3"
url = "2.1"
futures = "0.3"
# async-std = "1.2"
# async-tls = "0.6"
tokio-tls = "0.3"
tokio = { version = "0.2", features = ["full"] }
# tokio-io = "0.2.0-alpha.6"
# tokio-tcp = "0.2.0-alpha.6"
# tokio-timer = "0.2"
anyhow = "1.0"
