[package]
name = "anet"
version = "0.4.0"
authors = ["Serbe <mkoctuk@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.11"
bytes = "0.5"
# byteorder = "1.3"
# env_logger = "0.7"
futures = "0.3"
# log = "0.4"
# async-std = "1.2"
# async-tls = "0.6"
tokio = { version = "0.2", features = ["full"] }
tokio-tls = "0.3"
# tokio-io = "0.2.0-alpha.6"
# tokio-tcp = "0.2.0-alpha.6"
# tokio-timer = "0.2"
thiserror = "1.0"
